--- a/1.0/default/AdminList.cshtml
+++ b/1.0/default/AdminList.cshtml
@@ -47,7 +47,7 @@
             }
         </table>
 
-        @RenderTemplate("AdminPaging.cshtml", appThemeSystem, Model, true)
+        @RenderTemplate("AdminPaging.cshtml", appThemeCatalog, Model, true)
 
     </div>
 
