--- a/1.0/default/ArticleList.cshtml
+++ b/1.0/default/ArticleList.cshtml
@@ -27,30 +27,29 @@
 
 @AddProcessData("resourcepath", appTheme.AppThemeVersionFolderRel + "/resx/")
 
-@if (portalCatalog.DebugMode)
-{<div class="w3-small">@DateTime.Now.ToString()</div>}
 
-<h1>
-    @if (sessionParams.GetInt("catid") == 0)
-    {
-        <span>@catalogSettings.CatalogName&nbsp;</span> }
-    else
-    {
-        <span>@categoryData.Name&nbsp;</span>}
-</h1>
+<div class="w3-main w3-light-grey" style="margin-left: 220px; padding-top: 0px;">
+    <div class="w3-row w3-white">
+        <div class="w3-col l10 m12" id="main">
 
-<div class="w3-row">
-    @RenderTemplate("SearchBanner.cshtml", appThemeDefault, Model, true)
-</div>
+            @if (sessionParams.GetInt("catid") == 0)
+            {
+                <h1>@catalogSettings.CatalogName &nbsp;</h1>
+            }
+            else
+            {
+                <h1>@categoryData.Name&nbsp;</h1>
+            }
 
-<div class="w3-row w3-padding-16 w3-center">
-    @foreach (ArticleLimpet articleData in articleDataList.GetArticleList())
-    {
-        hbsDict.Remove("data");
-        hbsDict.Add("data", articleData.Info);
-        @RenderHandleBarsRC(hbsDict, appTheme, "productlistrow.hbs", remoteModule.ModuleRef, "")
-    }
-</div>
-<div class="w3-row w3-padding-16 w3-center">
-    @RenderTemplate("ProductPaging.cshtml", appThemeDefault, Model, true)
+            @foreach (var art in articleDataList.GetArticleList())
+            {
+                <h2 id="@art.GUIDKey">@art.Name</h2>
+                <div>
+                    @HtmlOf(art.RichText)
+                </div>
+            }
+
+        </div>
+        <hr>
+    </div>
 </div>
