--- a/1.0/default/ArticleMenu.cshtml
+++ b/1.0/default/ArticleMenu.cshtml
@@ -28,14 +28,11 @@
 @AddProcessData("resourcepath", appTheme.AppThemeVersionFolderRel + "/resx/")
 
 
-    <div class="w3-row">
-        <!--  <a href='javascript:void(0)' onclick='close_menu()' class='w3-button w3-hide-large w3-large w3-display-topright' style='right:16px;padding:3px 12px;font-weight:bold;'>&times;</a>-->
-        <h2 class="left">W3.CSS</h2>
-        <br>
+<div class="w3-row">
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-right w3-xlarge w3-hide-large" title="Close Menu">×</a>
+    @foreach (var art in articleDataList.GetArticleList())
+    {
+        <a target="_top" class="w3-button w3-block" href="#@art.GUIDKey" style="text-decoration:none;">@art.Name</a>
+    }
 
-        @foreach (var art in articleDataList.GetArticleList())
-        {
-            <a target="_top" class="w3-button w3-block" href="#@art.GUIDKey" style="text-decoration:none;">@art.Name</a>
-        }
-
-    </div>
+</div>
