--- a/1.0/default/ArticleList.cshtml
+++ b/1.0/default/ArticleList.cshtml
@@ -17,7 +17,8 @@
     var categoryList = (CategoryLimpetList)Model.GetDataObject("categorylist");
     var appTheme = (AppThemeLimpet)Model.GetDataObject("apptheme");
     var appThemeDefault = (AppThemeLimpet)Model.GetDataObject("appthemedefault");
-    var categoryData = new CategoryLimpet(portalCatalog.PortalId, articleDataList.CategoryId, sessionParams.CultureCode);
+    var systemData = (SystemLimpet)Model.GetDataObject("systemdata");
+    var categoryData = new CategoryLimpet(portalCatalog.PortalId, articleDataList.CategoryId, sessionParams.CultureCode, systemData.SystemKey);
     var catalogSettings = (CatalogSettingsLimpet)Model.GetDataObject("catalogsettings");
 
     var hbsDict = new Dictionary<string, SimplisityInfo>();
