--- a/1.0/default/AdminDetail.cshtml
+++ b/1.0/default/AdminDetail.cshtml
@@ -13,7 +13,7 @@
     {
         info = articleData.Info;
     }
-    var portalCatalog = new PortalCatalogLimpet(articleData.PortalId, DNNrocketUtils.GetEditCulture());
+    var portalCatalog = (PortalCatalogLimpet)Model.GetDataObject("portalcatalog");
     var systemData = (SystemLimpet)Model.GetDataObject("systemdata");
     var appThemeSystem = (AppThemeSystemLimpet)Model.GetDataObject("appthemesystem");
     var appThemeCatalog = (AppThemeSystemLimpet)Model.GetDataObject("appthemecatalog");
@@ -71,36 +71,18 @@
             </div>
             <div class="w3-row">
                 <div class="w3-third w3-padding-small">
-                    <div onclick="$('#categoriestab').toggle();$('#categoriestabexpand').toggle();" class="w3-button w3-block w3-theme-l3 w3-left-align ">
-                        @ResourceKey("RC.categories")
-                        <span id="categoriestabexpand" class="material-icons w3-right" style="display:none;">
-                            unfold_more
-                        </span>
-                    </div>
-                    <div id="categoriestab" class='w3-row sectionname a-articlecategorylist w3-border w3-padding' style="">
+                    <div id="categoriestab" class='w3-row sectionname a-articlecategorylist w3-border-top w3-padding' style="">
                         @RenderTemplate("ArticleCategoryList.cshtml", appThemeCatalog, Model, true)
                     </div>
                 </div>
                 <div class="w3-third w3-padding-small">
-                    <div onclick="$('#docs').toggle();$('#docsexpand').toggle();" class="w3-button w3-block w3-theme-l3 w3-left-align">
-                        @ResourceKey("DNNrocket.docs")
-                        <span id="docsexpand" class="material-icons w3-right" style="display:none;">
-                            unfold_more
-                        </span>
-                    </div>
-                    <div id="docs" class='w3-row sectionname w3-border w3-padding' style="">
+                    <div id="docs" class='w3-row sectionname w3-border-top w3-padding' style="">
                         @RenderTemplate("ArticleDocuments.cshtml", appThemeCatalog, Model, true)
                     </div>
                     @RenderTemplate("ArticleDocumentSelect.cshtml", appThemeCatalog, Model, true)
                 </div>
                 <div class="w3-third w3-padding-small">
-                    <div onclick="$('#links').toggle();$('#linksexpand').toggle();" class="w3-button w3-block w3-theme-l3 w3-left-align">
-                        @ResourceKey("DNNrocket.links")
-                        <span id="linksexpand" class="material-icons w3-right" style="display:none;">
-                            unfold_more
-                        </span>
-                    </div>
-                    <div id="links" class='w3-row sectionname w3-border w3-padding' style="">
+                    <div id="links" class='w3-row sectionname w3-border-top w3-padding' style="">
                         @RenderTemplate("ArticleLinks.cshtml", appThemeCatalog, Model, true)
                     </div>
                 </div>
