--- a/1.0/default/View.cshtml
+++ b/1.0/default/View.cshtml
@@ -17,8 +17,14 @@
     var categoryList = (CategoryLimpetList)Model.GetDataObject("categorylist");
     var appTheme = (AppThemeLimpet)Model.GetDataObject("apptheme");
     var appThemeDefault = (AppThemeLimpet)Model.GetDataObject("appthemedefault");
-    var categoryData = new CategoryLimpet(portalCatalog.PortalId, articleDataList.CategoryId, sessionParams.CultureCode);
+    var systemData = (SystemLimpet)Model.GetDataObject("systemdata");
     var catalogSettings = (CatalogSettingsLimpet)Model.GetDataObject("catalogsettings");
+    var catid = articleDataList.CategoryId;
+    if (catid == 0)
+    {
+        catid = catalogSettings.DefaultCategoryId;
+    }
+    var categoryData = new CategoryLimpet(portalCatalog.PortalId, catid, sessionParams.CultureCode, systemData.SystemKey);
 
     var hbsDict = new Dictionary<string, SimplisityInfo>();
     hbsDict.Add("sessionparams", sessionParams.Info);
@@ -27,10 +33,9 @@
 
 @AddProcessData("resourcepath", appTheme.AppThemeVersionFolderRel + "/resx/")
 
-
 <div class="w3-row w3-white w3-padding">
 
-        @if (sessionParams.GetInt("catid") == 0)
+        @if (catid == 0)
         {
             <h1>@catalogSettings.CatalogName &nbsp;</h1>
         }
