--- a/1.0/default/CategoryMenu.cshtml
+++ b/1.0/default/CategoryMenu.cshtml
@@ -18,7 +18,7 @@
 
 
 <div class="w3-row">
-    <div class="w3-bar w3-light-grey">
+    <div class="w3-bar">
 
         @foreach (var c in categoryList.GetCategoryList(0))
         {
