--- a/1.0/default/View.cshtml
+++ b/1.0/default/View.cshtml
@@ -39,7 +39,7 @@
 
 
 <div class="w3-sidebar w3-white w3-card" style="width:240px;">
-    <div class="w3-white w3-border-bottom" style="height:43px;">&nbsp;</div>
+    <div class="w3-white w3-light-grey w3-center w3-xlarge" style="height:43px;">&nbsp;</div>
     <div class="w3-bar-block w3-large">
     @foreach (var catData in catList)
     {
@@ -61,7 +61,7 @@
         @foreach (var art in artList)
         {
             <div id="@art.GUIDKey" style="padding-top:40px;"></div>
-            <h1 class="w3-border-top">@art.Name</h1>
+            <h1>@art.Name</h1>
             <div class="w3-padding">
                 @HtmlOf(art.RichText)
             </div>
